- fixed horizontal scroll bars on gallary+details - updated footer to just icon on mobile

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -62,7 +62,7 @@ html, body {
 }
 
 .body-container {
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .headerImages {
